objects/PC_TriggerHandlerRegister__mdt.object
<CustomObject>
    <description>Custom metadata type to register all object trigger handlers and determine order of execution</description>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to activate</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_ApexClass__c</fullName>
        <inlineHelpText>API name of the trigger handler class that needs to be executed when this object trigger runs.</inlineHelpText>
        <label>Trigger Handler Class</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Description__c</fullName>
        <inlineHelpText>Brief description of trigger handler</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_OrderOfExecution__c</fullName>
        <inlineHelpText>Order in which trigger handlers should be executed. For example: 1 will be executed first, 2 will be executed next.</inlineHelpText>
        <label>OrderOfExecution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_OtherObject__c</fullName>
        <inlineHelpText>API name for the object if object is not shown in sObject picklist. Ensure that sObject picklist has &apos;Other&apos; value chosen if you enter a value in this field.</inlineHelpText>
        <label>Other Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_sObject__c</fullName>
        <inlineHelpText>Object for which trigger handler needs to be registered. If you don&apos;t see the object in this list, choose &apos;Other&apos; and mention API name of the object under &apos;Other Object&apos; field.</inlineHelpText>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>PC_Address__c</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>PC_Association__c</fullName>
                </value>
                <value>
                    <fullName>PC_Health_Plan__c</fullName>
                </value>
                <value>
                    <fullName>PC_Applicant__c</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>PC_Document__c</fullName>
                </value>
                <value>
                    <fullName>PC_Program_Service_Permission__c</fullName>
                </value>
                <value>
                    <fullName>PC_Pharmacy_Referral__c</fullName>
                </value>
                <value>
                    <fullName>PC_AdverseEvent__c</fullName>
                </value>
                <value>
                    <fullName>PC_Alert__c</fullName>
                </value>
                <value>
                    <fullName>PC_Dispense__c</fullName>
                </value>
                <value>
                    <fullName>PC_Distributor__c</fullName>
                </value>
                <value>
                    <fullName>PC_Document_Log__c</fullName>
                </value>
                <value>
                    <fullName>PC_Engagement_Program__c</fullName>
                </value>
                <value>
                    <fullName>PC_Engagement_Program_Product__c</fullName>
                </value>
                <value>
                    <fullName>PC_Engagement_Program_Service__c</fullName>
                </value>
                <value>
                    <fullName>PC_Engagement_Program_Eletter__c</fullName>
                </value>
                <value>
                    <fullName>PC_Error_Log__c</fullName>
                </value>
                <value>
                    <fullName>PC_Interaction__c</fullName>
                </value>
                <value>
                    <fullName>PC_Measurement__c</fullName>
                </value>
                <value>
                    <fullName>PC_Message__c</fullName>
                </value>
                <value>
                    <fullName>PC_Prescription__c</fullName>
                </value>
                <value>
                    <fullName>PC_Program_Coverage__c</fullName>
                </value>
                <value>
                    <fullName>PC_Request_Form__c</fullName>
                </value>
                <value>
                    <fullName>PC_Request_Form_Service__c</fullName>
                </value>
                <value>
                    <fullName>PC_Service__c</fullName>
                </value>
                <value>
                    <fullName>PC_Support_Model__c</fullName>
                </value>
                <value>
                    <fullName>PC_eLetter__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TriggerHandlerRegister</label>
    <pluralLabel>TriggerHandlerRegisters</pluralLabel>
</CustomObject>